[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["jumpers775 <<>>"]
description = ""
name = "repl_python3_OneBot"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
discord-together = "^1.2.4"
ffmpeg-python = "^0.2.0"
youtube_dl = "^2021.12.17"
youtube-search = "^2.1.0"
psutil = "^5.9.0"
py-cpuinfo = "^8.0.0"
[tool.poetry.dev-dependencies]
